<?xml version="1.0"?>
<package format="2">
  <name>blackturtle-robot</name>
  <version>0.0.4</version>
  <description>The blackturtle-robot package</description>

  
  <maintainer email="theblackturtlebot@gmail.com">Wahyu Mahardika</maintainer>

  
  <license>BSD</license>


  <url type="repository">https://github.com/wmhrdk/blackturtle-robot</url>


  <author email="theblackturtlebot@gmail.com">Wahyu Mahardika</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>python-rpi.gpio</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
